# parse_any_to_parquet

./: Cargo.toml  README.md  config.toml
docs/: DEPLOYMENT.md
src/: cli.rs  config.rs  converter.rs  format.rs  main.rs  processor.rs  reader.rs  watcher.rs  writer.rs
src/reader/: csv_reader.rs  excel_reader.rs  json_reader.rs  xml_reader.rs
