[package]
name = "parse_to_parquet"
version = "1.0.0"
edition = "2021"
authors = ["Ewerton"]
description = "Convert CSV, JSON, XML, XLS, XLSX, ODS files to Parquet format - MinIO integration"
readme = "README.md"
license = "MIT"

[dependencies]
polars = { version = "0.46", features = ["lazy", "parquet", "json", "csv", "dtype-struct"] }
calamine = "0.26"
quick-xml = "0.37"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
notify = "7.0"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
